samples/_failures_safe/1761283395_091748_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be6c6570.c:146: error: expected ‘;’, ‘,’ or ‘)’ at end of input
